--- a/index.html
+++ b/index.html
@@ -20,21 +20,12 @@
           </div>
           <!-- Button -->
           <div id="header-button">
-            <ul>
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="profile.html">PROFILE</a></li>
-              <li><a href="product.html">PRODUCT</a></li>
-            </ul>
-          </div>
-          <!-- Login -->
-          <div id="header-login">
-            <span class="material-symbols-outlined"> account_circle </span>
-            <div id="text-login">
-              <p id="login">Login</p>
-            </div>
+            <a href="index.html">HOME</a>
+            <a href="profile.html">PROFILE</a>
+            <a href="product.html">PRODUCT</a>
+            <div class="animation start-home"></div>
           </div>
         </div>
-
         <!-- Content -->
         <div id="bg-content">
           <div id="co-content">
@@ -127,6 +118,42 @@
                     Box Hampers kami, setiap momen spesial akan terasa lebih
                     berarti dan berkesan.
                   </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="bg-footer">
+            <div id="co-footer">
+              <div id="footer">
+                <!-- <div id="komit">KOMITMEN KAMI</div> -->
+                <div id="komit">
+                  Kami Berkomitmen Untuk Memberikan Produk Berkualitas Tinggi
+                  Dengan Layanan Kostumisasi Terbaik Melalui Kotak Custom Dari
+                  Kayu MDF
+                </div>
+                <div id="alamat">
+                  <p>
+                    Jl. Kempo No.6, RT.001/RW.010, Sukamiskin, Kec. Arcamanik,
+                    Kota Bandung, Jawa Barat 40293
+                  </p>
+                </div>
+                <div id="email-telp">
+                  <div id="footer-email">
+                    <div id="img-footer-email">
+                      <img src="assets/Vector 14.png" alt="Footer Email" />
+                    </div>
+                    <div id="text-footer-email">
+                      <p>CRWT.Craft@email.com</p>
+                    </div>
+                  </div>
+                  <div id="footer-telp">
+                    <div id="img-footer-telp">
+                      <img src="assets/Vector 15.png" alt="Footer Telp" />
+                    </div>
+                    <div id="text-footer-telp">
+                      <p>+628363846303</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
