--- a/profile.html
+++ b/profile.html
@@ -20,18 +20,10 @@
           </div>
           <!-- Button -->
           <div id="header-button">
-            <ul>
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="profile.html">PROFILE</a></li>
-              <li><a href="product.html">PRODUCT</a></li>
-            </ul>
-          </div>
-          <!-- Login -->
-          <div id="header-login">
-            <span class="material-symbols-outlined"> account_circle </span>
-            <div id="text-login">
-              <p id="login">Login</p>
-            </div>
+            <a href="index.html">HOME</a>
+            <a href="profile.html">PROFILE</a>
+            <a href="product.html">PRODUCT</a>
+            <div class="animation start-profile"></div>
           </div>
         </div>
       </div>
@@ -57,6 +49,30 @@
                 pemerintah dan juga korporat untuk membuat merchandise khusus
                 untuk instansi tersebut dan menjadi salah satu kerajinan
                 unggulan di jawabarat khsususnya di kota bandung.
+              </div>
+              <div id="text-1">Fitur Utama:</div>
+              <div id="text">
+                1. Bahan Berkualitas: Terbuat dari MDF yang kuat dan ramah
+                lingkungan, memberikan ketahanan dan tampilan premium.
+              </div>
+              <div id="text">
+                2. Desain Elegan: Memiliki finishing halus dengan pilihan warna
+                dan pola yang dapat disesuaikan, memastikan kotak ini terlihat
+                menarik dan profesional.
+              </div>
+              <div id="text">
+                3. Kustomisasi Tinggi: Dapat disesuaikan dengan berbagai pilihan
+                ukiran, cetakan, dan dekorasi sesuai kebutuhan, termasuk logo,
+                nama, atau pesan khusus.
+              </div>
+              <div id="text">
+                4. Multifungsi: Cocok untuk berbagai keperluan seperti
+                penyimpanan perhiasan, hadiah, dokumen penting, atau barang
+                koleksi.
+              </div>
+              <div id="text">
+                5. Keamanan Produk: Dilengkapi dengan sistem penutup yang aman
+                dan tahan lama untuk melindungi isi di dalamnya.
               </div>
             </div>
           </div>
