--- a/product.html
+++ b/product.html
@@ -23,6 +23,7 @@
             <a href="index.html">HOME</a>
             <a href="profile.html">PROFILE</a>
             <a href="product.html">PRODUCT</a>
+            <a href="contact.html">CONTACT</a>
             <div class="animation start-product"></div>
           </div>
         </div>
